[metadata]
name = puslib
version = attr: puslib.__version__
license = BSD-3-Clause
author = Pontus Nyman
author_email = pontusnyman@gmail.com
description = An implementation of the telemetry and telecommand packet utilization standard (PUS).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pxntus/puslib
project_urls =
    Bug Tracker = https://github.com/pxntus/puslib/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Communications
    Topic :: Scientific/Engineering

[options]
package_dir = = puslib
packages = find:
python_requires = >=3.7

[options.packages.find]
where = puslib

[tool:pytest]
testpaths = tests
