[metadata]
name = puslib
version = attr: puslib.__version__
license = BSD-3-Clause
author = Pontus Nyman
author_email = pontusnyman@gmail.com
description = An implementation of the telemetry and telecommand packet utilization standard (PUS).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pxntus/puslib
project_urls =
    Bug Tracker = https://github.com/pxntus/puslib/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Communications
    Topic :: Scientific/Engineering

[options]
package_dir = = puslib
packages = find:
python_requires = >=3.7

[options.packages.find]
where = puslib

[tool:pytest]
testpaths = tests
